--- a/.github/workflows/cdonly.yml
+++ b/.github/workflows/cdonly.yml
@@ -35,3 +35,5 @@ jobs:
           solution-path: AutomationScript.sln
           # The chosen name of the artifact. E.g. MyPackageName.  Required for stages: All, Upload and Deploy.
           artifact-name: EmpowerHelloWorld
+          version: 1.0.0
+          build-number: ${{ github.run-number}}
